# peek

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  Dockerfile.circleci  Procfile  README.md  build.rs  fly.toml  setup.sh  tailwind.config.js
.circleci/: config.yml
browser-tests/: package.json
browser-tests/cypress/e2e/: add_team_member.cy.js  hello-world.cy.js  sign-in.cy.js  sign-up.cy.js
browser-tests/cypress/support/: commands.js
frontend/: Cargo.toml
frontend/src/: lib.rs
server/: .envrc  Cargo.toml  build.rs  litestream.yaml  pkg  sqlx-data.json
server/migrations/: 20220820181653_CreateSessions.sql  20220830040106_CreateUsers.sql  20220918185419_AssociateSessionsAndUsers.sql  20221026012335_AddTeamMembers.sql
server/src/: auth.rs  external_apis.rs  main.rs  routes.rs  templates.rs
server/src/external_apis/: bing_news.rs
server/src/external_apis/mocks/bing_news/: default_search.yaml
server/src/routes/: auth.rs  news.rs  profile.rs  team_members.rs
server/src/routes/auth/: sign_up.rs
server/src/routes/auth/sign_in/: get.rs  post.rs
server/src/routes/auth/sign_up/: get.rs  post.rs
server/src/templates/: footer.rs
server/src/templates/components/: buttons.rs  inputs.rs
