[package]
name = "yanwa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
maud = { features = ["axum"], git = "https://github.com/lambda-fairy/maud", branch = "main" }
serde = { version = "1.0.143", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
