[package]
name = "peek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4.1"
axum = "0.6.0-rc.1"
chrono = { version = "0.4.22", features = ["serde"] }
color-eyre = "0.6.2"
maud = { features = ["axum"], git = "https://github.com/coreyja/maud", branch = "ca/main/axum-0.6" }
opentelemetry = { version = "0.18.0", features = ["rt-tokio"], default-features = false }
opentelemetry-otlp = { version = "0.11.0", features = ["http", "http-proto", "reqwest-rustls", "reqwest-client"], default-features = false }
rand_core = { version = "0.6.3", features = ["std"] }
reqwest = { version = "0.11.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "chrono", "offline"] }
tokio = { version = "1.20.1", features = ["full"] }
tower-cookies = { git = "https://github.com/coreyja/tower-cookies", branch = "ca/main/axum-0.6", features = ["private", "signed"] }
tower-http = { version = "0.3.4", features = ["tracing", "trace"] }
tracing = "0.1.36"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.1"
